--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
-        "friendsofsymfony/ckeditor-bundle": "^2.5",
+        "eckinox/tinymce-bundle": "^2.0",
+        "knplabs/knp-snappy-bundle": "^1.10",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/asset": "7.1.*",
         "symfony/asset-mapper": "7.1.*",
@@ -60,8 +61,7 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "importmap:install": "symfony-cmd",
-            "ckeditor:install": "symfony-cmd"
+            "importmap:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
